# fastapi-clean-architecture-ddd-template

./: .env.example  Dockerfile  README-PTBR.md  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
app/: app.py
app/core/: config.py  database.py  exception_handler.py  exceptions.py  logging.py  middleware.py  resources.py  schemas.py  security.py  settings.py  utils.py
app/modules/example/application/: use_cases.py
app/modules/example/domain/: entities.py  mappers.py
app/modules/example/presentation/: docs.py  exceptions.py  routers.py  schemas.py
app/modules/health/application/: enums.py
app/modules/health/presentation/: docs.py  exceptions.py  routers.py  schemas.py
scripts/: directory_tree.py
